<resources>
    <string name="app_name">Pocket Chef</string>
    <string name="menu_titulo_categorias">Categorias</string>
    <string name="menu_bienvenido">Bienvenido</string>
    <string name="menu_para_ti">Tus Retos</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email">Email</string>
    <string name="ingresar">Ingresar</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombres">Nombres</string>
    <string name="pocket_nchef">Pocket\nChef</string>
    <string name="tus_recetas">Tus Recetas</string>
    <string name="ojo">Tus gustos son?</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="preparaci_n">Preparación</string>
    <string name="titulo_experiencia">Experiencia</string>
    <string name="experiencia">Elige tu experiencia</string>
    <string name="escoja_sus_filtros">Escoja sus filtros</string>
    <string name="filtrar">Filtrar</string>
    <string name="almuerzos">Almuerzos</string>
    <string name="cenas">Cenas</string>
    <string name="cocteles">Cocteles</string>
    <string name="desayunos">Desayunos</string>
    <string name="estudiante">Estudiante</string>
    <string name="galletas">Galletas</string>
    <string name="halloween">Halloween</string>
    <string name="navidad">Navidad</string>
    <string name="pan">Pan</string>
    <string name="pasteles">Pasteles</string>
    <string name="su_experiencia">Chef?</string>
    <string name="save">Guardar</string>
    <string name="experiencia_guia">Configurar su experiencia en su Perfil de Usuario</string>
    <string name="Cambiar_tema">Tema Oscuro</string>
    <string name="tu_me_gusta">Tus Gustos Mi Chef</string>
    <string name="guardar_imagen">Guardar Imagen</string>
    <string name="tituloCategoria">Título de Categoria</string>
    <string name="tituloReceta">Título de Receta</string>
    <string name="agregarIngredientes">Agregar Ingredientes</string>
    <string name="agregarPasos">Agregar Pasos</string>
    <string name="finalizar">Finalizar</string>
    <string name="agregar">Agregar</string>
    <string name="nombreIngrediente">Nombre Ingrediente</string>
    <string name="cantidadRequerida">Cantidad Requerida</string>
    <string name="ingresarDescripcionPlato">Ingrese la descripción del plato por favor</string>
    <string name="hecho">Hecho</string>
    <string name="fotoPlato">Foto del Plato</string>
    <string name="descripcionPlato">Descripción del plato</string>
    <string name="ingresarDescripcionPaso">Ingrese la descripción del paso por favor</string>
    <string name="dificultad">Dificultad</string>
    <string name="tiempoPreparacion">Tiempo de preparación</string>
    <string name="duracion">Duracion</string>
    <string name="guardar">Guardar</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="title_activity_tu_me_gusta">activity_tu_me_gusta</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>