<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".PerfilUsuarioActivity">

    <ImageButton
        android:id="@+id/boton_volver"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/deshacer"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageButton>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_foto_perfil"
        android:layout_width="264dp"
        android:layout_height="264dp"
        app:cardCornerRadius="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_volver">

        <ImageView
            android:id="@+id/foto_perfil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/desayunos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boton_volver">

        </ImageView>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="320dp"
        android:layout_height="360dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view_foto_perfil">

        <View
            android:id="@+id/fondodelogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_esquinas_redondeadas"
            android:backgroundTint="@color/gray">

        </View>


        <EditText
            android:id="@+id/usuario_edit_nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:hint="@string/nombres"
            android:inputType="text"
            android:maxLength="40"
            android:maxLines="5"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/usuario_edit_apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:hint="@string/apellidos"
            android:inputType="text"
            android:maxLength="40"
            android:maxLines="5"
            app:layout_constraintTop_toBottomOf="@id/usuario_edit_nombres" />

        <EditText
            android:id="@+id/usuario_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLength="40"
            android:maxLines="5"
            app:layout_constraintTop_toBottomOf="@id/usuario_edit_apellidos" />

        <EditText
            android:id="@+id/usuario_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:maxLength="40"
            android:maxLines="5"
            app:layout_constraintTop_toBottomOf="@id/usuario_edit_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>